<resources>
    <string name="app_name">MarkMeBeta</string>
    <string name="search_title">Search</string>

    <string name="menu_item_notification">Неделя 1</string>
    <string name="menu_item_notification2">Неделя 2</string>
    <string name="menu_item_notification3">Предметы</string>
    <string name="menu_item_exit">Выход</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="tab_item_history">Неделя 1</string>
    <string name="tab_item_ideas">Неделя 2</string>
    <string name="tab_item_todo">Предметы</string>
    <string name="title_activity_login">Войти</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_first_name">Имя</string>
    <string name="prompt_second_name">Отчество</string>
    <string name="prompt_last_name">Фамилия</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Логин не корректный</string>
    <string name="error_invalid_password">Этот пароль слишком короткий</string>
    <string name="error_invalid_field">Это поле слишком короткое</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Это поле обязательно</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Регистрация</string>

    <!-- String header -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="toggle_button_off">Преподаватель</string>
    <string name="toggle_button_on">Студент</string>
    <string name="error_occupied_email">Данный логин уже занят</string>
    <string name="prompt_group">Группа</string>
    <string name="error_unknown_error">Неизвестная ошибка</string>
    <string name="menu_item_camera">Сканировать код</string>
    <string name="menu_item_notification4">Фейковые отметки</string>


</resources>
