<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="Меню">
        <menu>
            <item
                android:id="@+id/actionNotificationItem"
                android:orderInCategory="1"
                android:title="@string/menu_item_notification"
                android:icon="@mipmap/ic_date_range_black_24dp" />

            <item
                android:id="@+id/actionNotificationItem2"
                android:orderInCategory="1"
                android:title="@string/menu_item_notification2"
                android:icon="@mipmap/ic_date_range_black_24dp" />

            <item
                android:id="@+id/actionNotificationItem3"
                android:orderInCategory="1"
                android:title="@string/menu_item_notification3"
                android:icon="@mipmap/ic_view_list_black_24dp" />

            <item
                android:id="@+id/actionCamera"
                android:orderInCategory="1"
                android:title="@string/menu_item_camera"
                android:icon="@mipmap/ic_message_text" />

            <item
                android:id="@+id/actionNotificationItem4"
                android:orderInCategory="100"
                android:icon="@mipmap/ic_message_text"
                android:title="@string/menu_item_notification4"
                app:showAsAction="always"
                app:actionViewClass="android.widget.TextView"/>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actionNotificationItemExit"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"
            android:title="@string/menu_item_exit" />

    </group>


</menu>